@@ -12,10 +12,7 @@ import org.swdc.dependency.utils.AnnotationDescription;
 import org.swdc.dependency.utils.AnnotationUtil;
 import org.swdc.dependency.utils.ReflectionUtil;
 
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
-import java.lang.reflect.Parameter;
+import java.lang.reflect.*;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.util.*;
@@ -109,14 +106,38 @@ public abstract class EnvironmentFactory implements DependencyFactory {
         AspectHandler handler = new AspectHandler(target,processPoints);
 
         try {
-            target = byteBuddy.subclass(target.getClass())
-                    .method(ElementMatchers.any())
-                    .intercept(InvocationHandlerAdapter.of(handler))
-                    .make()
-                    .load(target.getClass().getModule().getClassLoader())
-                    .getLoaded()
-                    .getConstructor()
-                    .newInstance();
+            try {
+                // 首先尝试加载静态代理，这个是为Graal提供的。
+                // 可以通过插件进行这种代理的静态编译，得到静态的代理类。
+                Class staticProxy = Class.forName(target.getClass().getName() + "$Proxied");
+                Object proxied = staticProxy.getConstructor().newInstance();
+                target = AccessController.doPrivileged((PrivilegedAction<Object>) ()-> {
+                    Field[] fields = staticProxy.getDeclaredFields();
+                    for (Field field: fields) {
+                        if (InvocationHandler.class.isAssignableFrom(field.getType())) {
+                            try {
+                                field.setAccessible(true);
+                                field.set(proxied,handler);
+                            } catch (IllegalAccessException e){
+                                //never happen
+                                throw new RuntimeException(e);
+                            }
+                        }
+                    }
+                    return proxied;
+                });
+               return (T)target;
+            } catch (ClassNotFoundException e) {
+                target = byteBuddy.subclass(target.getClass())
+                        .method(ElementMatchers.any())
+                        .intercept(InvocationHandlerAdapter.of(handler))
+                        .name(target.getClass().getName() + "$Proxied")
+                        .make()
+                        .load(target.getClass().getModule().getClassLoader())
+                        .getLoaded()
+                        .getConstructor()
+                        .newInstance();
+            }
         } catch (Exception e) {
             throw new RuntimeException("无法为组件：" + target.getClass() + "提供增强，代理对象创建失败！",e);
         }
